@@ -6,8 +6,9 @@
 #include "../Objects/stringlib/unicodedefs.h"
 
 
-#define FORMAT_STRING _PyUnicode_FormatAdvanced
-#define FORMAT_LONG   _PyLong_FormatAdvanced
-#define FORMAT_FLOAT  _PyFloat_FormatAdvanced
+#define FORMAT_STRING  _PyUnicode_FormatAdvanced
+#define FORMAT_LONG    _PyLong_FormatAdvanced
+#define FORMAT_FLOAT   _PyFloat_FormatAdvanced
+#define FORMAT_COMPLEX _PyComplex_FormatAdvanced
 
 #include "../Objects/stringlib/formatter.h"
