@@ -12,6 +12,9 @@ What's New in Python 3.1 beta 1?
 Core and Builtins
 -----------------
 
+- Issue #1588: Add complex.__format__. For example, 
+  format(complex(1, 2./3), '.5') now produces a sensible result.
+
 - Issue #5864: Fix empty format code formatting for floats so that it
   never gives more than the requested number of significant digits.
 
